# spira

./: README.md  pyproject.toml
DRCtests/: drctests.py  max_width.lydrc  min_size.lydrc  min_spacing.lydb  min_spacing.lydrc  no_overlap_overhang.lydrc
spira/: all.py  drcparser.py  max_width_drc.py  min_size_drc.py  min_spacing_drc.py  settings.py
spira.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spira/drc/: all.py  drcparse_exec.py  drcparser.py  max_width_drc.py  min_size_drc.py  min_spacing_drc.py  no_overlap_drc.py
spira/yevon/gdsii/: pcell.py  pcellc .py
spira/yevon/utils/: netlist.py
tests/: JJDevice.py  dcsfq.py  restests.py
