[tool.poetry]
name = "spira"
version = "0.2.3.dev"
description = "SPiRA pcell framework"
authors = [] # "Ruben van Staden <rubenvanstaden@gmail.com>"

[tool.poetry.dependencies]
python = "^3.10"
#networkx = "2.3"
networkx = "*"
#gdspy = "1.5"
gdspy = "^1.6"
numpy = "*"
pandoc = "*"
meshio = "*"
scipy = "*"
plotly = "*"
pytest = "*"
pyclipper = "*"
pygmsh = "6.0.2"
matplotlib = "*"
shapely = "*"
lxml = "*"
termcolor = "*"
colorama = "*"
sphinxcontrib-napoleon = "*"
SchemDraw = "0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
